Fix auth, payment workflow, and production deployment readiness.
Harden JWT security and exception handling, make payment processing transactional with reliable history/activity reads, and add Render/Vercel deployment config.

Co-authored-by: Cursor <cursoragent@cursor.com>