@@ -2,22 +2,26 @@ package com.billjoy.service;
 
 import com.billjoy.dto.PayBillRequest;
 import com.billjoy.dto.PaymentDto;
+import com.billjoy.exception.BillAlreadyPaidException;
+import com.billjoy.exception.BillNotFoundException;
+import com.billjoy.exception.UnauthorizedBillAccessException;
 import com.billjoy.model.*;
+import com.billjoy.repository.AuditLogRepository;
 import com.billjoy.repository.BillRepository;
+import com.billjoy.repository.NotificationRepository;
 import com.billjoy.repository.PaymentRepository;
 import com.billjoy.repository.UserRepository;
-import com.billjoy.repository.NotificationRepository;
-import com.billjoy.repository.AuditLogRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class PaymentService {
 
     private final PaymentRepository paymentRepository;
@@ -28,17 +32,24 @@ public class PaymentService {
 
     @Transactional
     public PaymentDto processPayment(String email, PayBillRequest request) {
-        User user = userRepository.findByEmail(email).orElseThrow();
-        Bill bill = billRepository.findById(request.getBillId())
-                .orElseThrow(() -> new RuntimeException("Bill not found"));
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
-        if (bill.getStatus() == BillStatus.PAID) {
-            throw new RuntimeException("Bill is already paid");
+        Bill bill = billRepository.findByIdWithUser(request.getBillId())
+                .orElseThrow(() -> new BillNotFoundException(request.getBillId()));
+
+        if (!bill.getUser().getId().equals(user.getId())) {
+            throw new UnauthorizedBillAccessException();
         }
 
-        // Logic for idempotency key could be added here if there was a separate
-        // idempotency table.
-        // For simplicity, we just process.
+        if (bill.getStatus() == BillStatus.PAID) {
+            throw new BillAlreadyPaidException(bill.getId());
+        }
+
+        paymentRepository.findByBillIdAndPaymentStatus(bill.getId(), PaymentStatus.SUCCESS)
+                .ifPresent(existing -> {
+                    throw new BillAlreadyPaidException(bill.getId());
+                });
 
         Payment payment = Payment.builder()
                 .user(user)
@@ -48,7 +59,6 @@ public class PaymentService {
                 .paymentStatus(PaymentStatus.SUCCESS)
                 .transactionId("TXN-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase())
                 .build();
-
         payment = paymentRepository.save(payment);
 
         bill.setStatus(BillStatus.PAID);
@@ -67,28 +77,38 @@ public class PaymentService {
 
         AuditLog auditLog = AuditLog.builder()
                 .user(user)
-                .action("PAYMENT_COMPLETED")
+                .action("PAYMENT_SUCCESS")
                 .entityType("PAYMENT")
                 .entityId(payment.getId())
-                .details("Paid ₹" + bill.getAmount() + " via " + request.getPaymentMethod())
+                .details("{\"amount\":" + bill.getAmount()
+                        + ",\"bill_type\":\"" + bill.getBillType().name()
+                        + "\",\"payment_method\":\"" + request.getPaymentMethod().name()
+                        + "\",\"transaction_id\":\"" + payment.getTransactionId() + "\"}")
                 .build();
         auditLogRepository.save(auditLog);
+
+        log.info("Payment processed: user={}, bill={}, payment={}, transaction={}",
+                user.getEmail(), bill.getId(), payment.getId(), payment.getTransactionId());
 
         return PaymentDto.fromEntity(payment);
     }
 
+    @Transactional(readOnly = true)
     public List<PaymentDto> getMyPayments(String email) {
-        User user = userRepository.findByEmail(email).orElseThrow();
-        return paymentRepository.findByUserIdOrderByPaymentDateDesc(user.getId())
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
+
+        return paymentRepository.findByUserIdWithDetailsOrderByPaymentDateDesc(user.getId())
                 .stream()
                 .map(PaymentDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public List<PaymentDto> getAllPayments() {
-        return paymentRepository.findAll()
+        return paymentRepository.findAllWithDetailsOrderByPaymentDateDesc()
                 .stream()
                 .map(PaymentDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
